# describedir

./: .describedir.json  .env  __init__.py  cli.py  config.py  fileio.py  llm.py  pyproject.toml  schema.py  traversal.py  view_descriptions.py  watch_dashboard.py
describedir.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
