[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "describedir"
version = "0.1.0"
description = "LLM-powered hierarchical file and folder description generator"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Your Name"}]
keywords = ["llm", "documentation", "directory", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
describedir = "cli:main"

[tool.setuptools]
py-modules = ["cli", "config", "fileio", "llm", "schema", "traversal"]